# bevy_stl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
assets/models/: README.md  disc.scad  disc.stl
examples/: spinning_disc.rs  spinning_disc_wireframe.rs
src/: lib.rs
