[package]
name = "bevy_stl"
version = "0.11.0"
authors = ["Niklas Cathor <niklas.cathor@gmx.de>"]
edition = "2021"
license = "MIT"
description = "STL loader for bevy, based on stl_io"
repository = "https://github.com/nilclass/bevy_stl"
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_render"
] }
anyhow = "1.0"
thiserror = "1.0"
stl_io = "0.6.0"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_winit",
    "x11"
] }

[features]
default = []

# Along with the triangle mesh, generate an additional wireframe mesh (a PrimitiveTopology::LineList).
# The wireframe mesh can be accessed by `asset_server.load("my-model.stl#wireframe")`.
wireframe = []

[[example]]
name = "spinning_disc"
path = "examples/spinning_disc.rs"
